resources/stylesheets/base.css
    html, body {
		height: 100%;
    }

	.bottom {
		min-height: 100%;
		height: 100%;
		padding-bottom: 20px;
	}
	
	/* every page should need this */
	input, textarea, select, .uneditable-input {
	       width: 165px;
	}

	* {
		margin: 0;
	}	
	
	.push {
		height: 199px; /* .push must be the same height as .footer */
		clear: both;
	}	

	.footer {
		padding-top: 15px;
		clear: both;		
	    background: url(../resources/images/footerbg.jpg) repeat-x #8d8d8d; 	 	 		
		border-top: solid 1px #676767;
		width: 100%;
		color: rgba(255, 255, 255, 0.7);
	    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);		
	}	
	
	.wrapper {
		min-height: 100%;
		height: auto !important;
		height: 100%;
		margin: 0 auto -199px; /* the bottom margin is the negative value of the footer's height */
	}	

	.footer ul {
	    float: left;
	    margin: 0;
	    padding: 10px 2% 20px 0;
	    -webkit-box-sizing: content-box;
	    -moz-box-sizing: content-box;
	    box-sizing: content-box;
	    width: 18%;
	    list-style: none;
	}

	.footer ul:last-child {
	    padding-right: 0;
	}

	.footer ul li a {
	    text-decoration: none;
		color: rgba(255, 255, 255, 0.7);
	    font-size: 12px;
	}

	.footer ul li a:hover {
	    text-decoration: underline;
	}

	.footer ul li h5 {
		color: rgba(255, 255, 255, 0.9);
	    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
	    margin-bottom: 10px;
	    padding-bottom: 10px;
		line-height: 20px;
		border-bottom:1px solid #676767;
		-webkit-box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);
		-moz-box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);
		box-shadow:0 1px 0 rgba(255, 255, 255, 0.5);	}

	.footer ul li h5 a {
	    font-size: 14px;
	    opacity: 1;
	}

	.footer .copyright {
	    font-size: 12px;
		border-top:1px solid #808080;
	    clear: both;
	    padding: 10px 0 20px;
	}

